name:           githab
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/markus1189/githab#readme>
homepage:       https://github.com/markus1189/githab#readme
bug-reports:    https://github.com/markus1189/githab/issues
author:         Markus Hauck
maintainer:     markus1189@gmail.com
copyright:      2018 Markus Hauck
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files: README.md

source-repository head
  type: git
  location: https://github.com/markus1189/githab

executable githab
  default-extensions: NoImplicitPrelude
  main-is: Main.hs
  other-modules:
      Paths_githab
  hs-source-dirs:
      app
  ghc-options: -Wall
               -Wcompat
               -Wincomplete-record-updates
               -Wincomplete-uni-patterns
               -Wredundant-constraints
               -threaded -rtsopts -with-rtsopts=-N

  build-depends: base >=4.7 && <5
               , aeson
               , bytestring
               , cases
               , connection
               , containers
               , formatting
               , fortytwo
               , http-client
               , http-client-tls
               , http-types
               , lens
               , lens-aeson
               , mtl
               , optparse-applicative
               , rio
               , servant
               , servant-client
               , text
               , time
               , transformers
               , turtle
               , wreq

  default-language: Haskell2010